codex-rs/tui-chatwidget/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Codex to do anything                                                    │"
"╰───────────────────────────────────────────────────────────────────gpt-5.6-sol╯"
"  gpt-5.6-sol default · /tmp/project                                            "
