codex-rs/tui-chatwidget/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_permissions_selection_popup_with_custom_profiles.snap
---
source: tui-chatwidget/src/chatwidget/tests/permissions.rs
assertion_line: 143
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions

  1. Ask for approval        Codex can read and edit files in the current
                             workspace, and run commands. Approval is required
                             to access the internet or edit other files.
  2. Full Access             Codex can edit files outside this workspace and
                             access the internet without asking for approval.
                             Exercise caution when using.
  3. Read Only               Codex can read files in the current workspace.
                             Approval is required to edit files or access the
                             internet.
› 4. locked-down (current)   Inspect and patch only approved workspace files.
     web-enabled (disabled)  Workspace profile with network access. (disabled:
                             Disabled by requirements.)

  Press enter to confirm or esc to go back
