codex-rs/tui-chatwidget/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_configured_composer_title.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭───────────────────────────────────────────────────────────────Roadmap cleanup╮"
"│❯ Ask Codex to do anything                                                    │"
"╰──────────────────────────────────────────────────────────gpt-5.3-codex─medium╯"
"  gpt-5.3-codex medium · /home/user/project                                     "
