codex-rs/tui-chatwidget/src/chatwidget/snapshots/codex_tui__chatwidget__tests__single_line_final_answer_hides_working_status.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(terminal.backend().vt100().screen().contents())
---

❯ count to 1


• 1

╭──────────────────────────────────────╮
│❯ Ask Codex to do anything            │
╰──────────────────────────────gpt-5─0s╯
  gpt-5 default · /tmp/project
